--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,7 @@
             "styles": [
               "./node_modules/material-design-icons/iconfont/material-icons.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
